--- a/SpecFlow.DocCreator.Examplepage/index.html
+++ b/SpecFlow.DocCreator.Examplepage/index.html
@@ -22,17 +22,16 @@
                 program generates.</p>
         </div>
     </div>
-    <div class="ui-widget-content">
-        <div class="ui-widget" id="testResultFilterBox" style="float: left">
+    <div class="ui-widget-content" style="width:100%; height:160; padding-left:10;">
+        <div class="ui-widget" id="testResultFilterBox" style="float: left; height:auto">
             <h4>Test result filter</h4>
-            <label>Show successful<input type="checkbox" id="showSuccessful" checked="checked" /></label><br />
-            <label>Show failed<input type="checkbox" id="showFailedOn" checked="checked" /></label><br />
-            <label>Show ignored<input type="checkbox" id="showIgnored" checked="checked" /></label><br />
-            <label>Show inconclusive<input type="checkbox" id="showInconclusive" checked="checked" /></label><br />
+            <div><label>Show successful<input type="checkbox" id="showSuccessful" checked="checked" /></label></div>
+            <div><label>Show failed<input type="checkbox" id="showFailedOn" checked="checked" /></label></div>
+            <div><label>Show ignored<input type="checkbox" id="showIgnored" checked="checked" /></label></div>
+            <div><label>Show inconclusive<input type="checkbox" id="showInconclusive" checked="checked" /></label></div>
         </div>
         <div class="ui-widget" id="tagFilterBox" style="float: left">
-            <h4>
-                Tag filter</h4>
+            <h4>Tag filter</h4>
             <select id="tagFilter">
                 <option value="all" selected="selected">Show all tags</option>
                 <option value="demoTag1">@tag1</option>
@@ -46,7 +45,10 @@
             <input type="text" value="Enter here" />
         </div>
     </div>
-    <script type="text/javascript" src="..\viewmodel.js"></script>
-    <script type="text/javascript" src="livingdocsApp.js"></script>
+    <div class="ui-widget" style="width:100%; height:160; padding-left:10;">
+        <h2>Data goes here</h2>
+        <script type="text/javascript" src="..\viewmodel.js"></script>
+        <script type="text/javascript" src="livingdocsApp.js"></script>
+    </div>    
 </body>
 </html>
